# computer_vision_opencl

./: .gitignore  CMakeLists.txt  go
ps1/: CMakeLists.txt  main.cxx
